--- a/public/assets/mama/css/style.css
+++ b/public/assets/mama/css/style.css
@@ -6383,7 +6383,7 @@ span.flatpickr-weekday {
   fill: #FFFFFF;
 }
 .slider-image-widget__caption {
-  padding: 19px 30px 19px 35px;
+  padding: 48px;
   background-color: #FFFFFF;
   border-radius: 8px;
   box-shadow: 0px 30px 53px 0px rgba(0, 0, 0, 0.12);
